[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
